# claude-code-over-github-copilot

./: Makefile  com.litellm.plist  copilot-config.yaml  pyproject.toml  requirements.txt
