[project]
name = "claude-code-over-github-copilot"
version = "0.1.0"
description = "Route Claude Code through GitHub Copilot models via a local LiteLLM proxy"
requires-python = ">=3.12,<3.13"
dependencies = [
    "litellm[proxy]==1.83.3",
    "psutil==7.2.2",
    "requests==2.32.5",
    "dnspython==2.8.0",
    "watchdog==6.0.0",
    "httpx[socks]==0.28.1",
    "uvloop~=0.21.0"
]

[tool.uv]
package = false
